# YOLOX-TensorRT10

./: CMakeLists.txt  README.md  detect_batch.cpp  detect_single.cpp  main.cpp
detector/: logging.h  yolox_detector.cpp  yolox_detector.h  yolox_detector.inl
